[gd_scene load_steps=10 format=3 uid="uid://bx3smlacxenw1"]

[ext_resource type="Script" path="res://scripts/laser_shoot.gd" id="1_s8qvo"]
[ext_resource type="Texture2D" uid="uid://deq75mkw8t3r7" path="res://craftpix-net-757069-free-spaceship-pixel-art-sprite-sheets/Fighter/Charge_2.png" id="2_unb14"]
[ext_resource type="Texture2D" uid="uid://6j8ua70g5xmx" path="res://craftpix-net-840730-free-animated-explosion-sprite-pack/PNG/Explosion_1/Explosion_1.png" id="2_wl1cj"]
[ext_resource type="Texture2D" uid="uid://decl4ys2s3sxa" path="res://craftpix-net-840730-free-animated-explosion-sprite-pack/PNG/Explosion_1/Explosion_2.png" id="3_0xwvf"]
[ext_resource type="Texture2D" uid="uid://cah61y6ogkchg" path="res://craftpix-net-840730-free-animated-explosion-sprite-pack/PNG/Explosion_1/Explosion_3.png" id="4_4std5"]
[ext_resource type="AudioStream" uid="uid://qdn7uww7e7uh" path="res://kenney_space-shooter-redux/Bonus/sfx_laser1.ogg" id="6_tmx2v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6kch"]
size = Vector2(7, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8glw"]
atlas = ExtResource("2_unb14")
region = Rect2(0, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqypq"]
animations = [{
"frames": [{
"duration": 0.1,
"texture": ExtResource("2_wl1cj")
}, {
"duration": 0.1,
"texture": ExtResource("3_0xwvf")
}, {
"duration": 0.1,
"texture": ExtResource("4_4std5")
}],
"loop": true,
"name": &"crashed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8glw")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="LaserShoot" type="Area2D"]
script = ExtResource("1_s8qvo")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_r6kch")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="Sprite" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_qqypq")

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tmx2v")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
